hlx_statics/styles.css
body{
    background-color: #fff;
    margin: 0;
    padding: 0;
    font-family: "Adobe Clean", "adobe-clean", sans-serif;
} 

img {
    max-width: 100%;
}

* {
    box-sizing: border-box;
}

header {
    position: sticky;
    top: 0;
		display: flex;
    height: 64px;
    padding-left: 32px;
    padding-right: 32px;
    border-bottom: 1px solid #eaeaea;
    font-size: 14px;
    font-weight: 700;
    color: #505050;
    text-decoration: none;
    background-color: #fff;
    z-index: 10;
}

header .icon {
    height: 24px;
    width: 20px;
    margin-right: 8px;
}

header p {
    padding: 16px;
    display: flex;
    align-items: center;
    margin-top: 0;
    margin-bottom: 0;
}

header p:last-child {
  margin-left: auto;
}

header p:last-child a {
  text-decoration: none;
}

header ul {
    display: flex;
    list-style: none;
    margin-top: 0;
    margin-bottom: 0;
}

header ul li {
    display: flex;
    align-items: center;
    padding: 16px 48px 24px;
    border-left: 1px solid #eaeaea;
    height: calc(100% + 1px);
}

header ul li:last-child {
  border-right: 1px solid #eaeaea;
}

header ul li a {
    font-size: 14px;
    font-weight: 400;
    color: #505050;
    text-decoration: none;
}

footer {
  background-color: #fafafa;
}

footer .section-wrapper > div {
  padding-top: 48px;
  padding-bottom: 32px;
  max-width: 1280px;
  margin: 0 auto;
  width: 100%;
}

footer>div:first-of-type div > ul {
  grid-template-areas: "apis blogs support developer";
  display: grid;
  list-style: none;
  grid-template-columns: 30% 22% 19%;
  gap: 32px;
  padding-inline-start: 0;
}

footer>div:first-of-type div > ul > li > p {
  margin-top: 0;
  font-size: 16px;
  font-weight: 700;
  line-height: 20.8px;
  color: rgb(44,44,44);
}

footer>div:first-of-type div > ul > li:nth-child(n+1):nth-child(-n+3) {
  border-right: 2px solid #e1e1e1;
}

footer>div:first-of-type div > ul > li > ul {
  list-style: none;
  padding-inline-start: 0;

}

footer>div:first-of-type div > ul > li:first-of-type ul  {
  column-count: 2;
}

/* this kinda annoying and tricky to apply styles to the footer lists in the right way */
footer>div:first-of-type div > ul > li:nth-child(1) ul li:nth-child(n+2):nth-child(-n+5) {
  padding-top: 16px;
}

footer>div:first-of-type div > ul > li:nth-child(1) ul li:nth-child(n+7):nth-child(-n+9) {
  padding-top: 16px;
}

footer>div:first-of-type div > ul > li:nth-child(n+2) ul li:nth-child(n+2) {
  padding-top: 16px;
}

/* view all link */
footer>div:first-of-type div > ul > li:nth-child(1) ul li:nth-child(5) a {
  color: #1473e6;
  font-weight: bold;
}

footer>div:first-of-type div > ul > li > ul li a {
  text-decoration: none;
  font-size: 14px;
  color: rgb(75, 75, 75);
  font-weight: 400;
  line-height: 21px;
}

footer>div:first-of-type div > ul > li > ul li a:hover {
  text-decoration: underline;
  text-decoration-color: rgb(75, 75, 75);
}

footer>div:nth-of-type(2) div  {
  padding: 0;
  margin-top: 24px;
  border-top: 2px solid #e1e1e1;
  display: flex;
}

footer>div:nth-of-type(2) div p {
  margin-left: auto;
  font-size: 12px;
  color: rgb(110, 110, 110);
  font-weight: 400;
  line-height: 18px;
}

footer>div:nth-of-type(2) div > ul {
    display: flex;
    padding-inline-start: 0;
    margin: 0;
}

footer>div:nth-of-type(2) div > ul > li {
    list-style: none;
    margin-right: 32px;
    margin-top: 8px;
}

footer>div:nth-of-type(2) div > ul > li a {
  text-decoration: none;
  font-size: 12px;
  color: rgb(110, 110, 110);
  font-weight: 400;
  line-height: 18px;
}

main .section-wrapper > div {
    margin: auto;
    padding-top: 60px;
}

main a:any-link {
	color: #1473e6;
	text-decoration: none;
}

main .icon {
	height: 40px;
	width: 40px;
}

.button {
	border-width: 2px;
	border-style: solid;
	border-radius: 16px;
	min-height: 32px;
	height: auto;
	min-width: 72px;
	padding: 4px 14px;
	padding-bottom: 4.5px;
	padding-top: 3.5px;
	font-size: 14px;
	font-weight: 700;
	transition: background .13s ease-out, border-color .13s ease-out, color .13s ease-out, box-shadow .13s ease-out;
  line-height: 1.3;
  -webkit-appearance: none;
}

.button.primary {
	background-color: #1473e6;
	border-color: #1473e6;
	color: #fff;
}

.button.primary:hover {
	background-color: #0d66d0;
	border-color: #0d66d0;
	color: #fff;
}

.button.secondary {
	background-color: transparent;
  border-color: #505050;
	color: #505050;
}

.button.secondary.quiet {
	background-color: transparent;
  border-style: none;
	color: #505050;
}

.button.secondary:hover {
	background-color: #505050;
	border-color: #505050;
	color: #fff;
}

main div.api-browser-container h2 {
  text-align: center;
  color: rgb(50,50,50);
  font-size: 28px;
	font-weight: 700;
	line-height: 36.4px;
}

